
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ SOCKET ;


 int closesocket (scalar_t__) ;
 scalar_t__ do_connect (char*,int) ;
 scalar_t__ send (scalar_t__,char*,int,int ) ;
 scalar_t__ strlen (char*) ;

int send_buffer(unsigned char * buf, unsigned int len, char * remotehost, int port)
{
 SOCKET sock;

 sock = do_connect(remotehost, port);

 if (sock<0) return -1;
 if (send(sock, (char *)buf,(int)strlen((char *)buf),0)<=0) return -1;

 closesocket(sock);
 return 1;
}
